# memes-ranker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README-Docker.md  dev-build-css.sh  docker-compose-super-simple.yml  docker-compose.simple.yml  docker-compose.yml  docker-entrypoint.sh  fix-permissions.sh  gunicorn.conf.py  hello.py  init_db_prod.py  load_test.py  nginx-simple.conf  nginx-super-simple.conf  nginx.Dockerfile  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  setup_db.py  start-production.sh  tailwind.config.js
.claude/commands/: git_commit.md
app/: auth.py  database.py  events.py  logging_config.py  main.py  models.py  utils.py  websocket_manager.py
plans/: initial_plan.md  results_reveal_feature_plan.md  websocket_realtime_plan.md
sql/: results_reveal_migration.sql  schema.sql
static/css/: components.css  globals.css  output.css
static/js/: admin-realtime.js  admin-results.js  app.js  frontend-logger.js  user-realtime.js  websocket.js
static/memes/: README.md
templates/: admin.html  admin_results.html  base.html  index.html  past_results.html  public_results.html
tests/: test_basic_flow.py  test_game_integration.py
